--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Basic node app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon server.js",
+    "start: prod": "NODE_ENV = production nodemon server.js"
   },
   "author": "Xenofon Siafakas",
   "license": "ISC",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/xenosiafakas/basic_node_app#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
