Implementation of Authorization, Authentication and Security

--- a/config.env
+++ b/config.env
@@ -1,5 +1,15 @@
 NODE_ENV=development
 PORT=8000
-USER = Xenos
+USER=Xenos
+
+JWT
+JWT_EXPIRES
+JWT_COOKIE
+
 DATABASE
 DATABASE_PASSWORD
+
+EMAIL_HOST
+EMAIL_PORT
+EMAIL_NAME
+EMAIL_PASSWORD
