--- a/package.json
+++ b/package.json
@@ -18,11 +18,19 @@
   },
   "homepage": "https://github.com/xenosiafakas/basic_node_app#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.1",
+    "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.20",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.6",
     "slugify": "^1.6.6",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "xss-clean": "^0.1.4"
   }
 }
